# geany-ctags-plugin

./: ChangeLog  README.waf  configure.in  glspi_app.c  glspi_dlg.c  glspi_doc.c  glspi_ver.h  waf  wscript
addons/: Makefile.am  NEWS  README  configure.in  makefile.win32
addons/po/: ChangeLog  LINGUAS  POTFILES.in  addons.pot  de.po  geanyaddons.pot  ru.po
addons/src/: Makefile.am  addons.c  ao_doclist.c  ao_openuri.c  ao_systray.c
backupcopy/: ChangeLog  Makefile.am  README  configure.in  makefile.win32
backupcopy/po/: ChangeLog  POTFILES.in  backupcopy.pot  de.po  fr.po
backupcopy/src/: Makefile.am  backupcopy.c
buildtest/: Makefile.am  README  autogen.sh  configure.in
buildtest/po/: POTFILES.in
externdbg/: README
externdbg/po/: LINGUAS  POTFILES.in  be.po  de.po
externdbg/src/: dbg.c
externdbg/tests/: unittests.c
filetree/: AUTHORS  ChangeLog  README
filetree/po/: POTFILES  POTFILES.in
filetree/src/: filetree.c
geany-mini-script/: ChangeLog  INSTALL  Makefile.am  TODO  configure.in
geany-mini-script/po/: LINGUAS  POTFILES  POTFILES.in  de.po  en.po  fr.po
geany-mini-script/src/: Makefile.am  gms.c  gms_gui.c  gms_gui.h
geany-mini-script/test/: awk.gms  perl.gms  python.gms  sed.gms  sed2.gms  shell.gms  testfile.txt  testfile2.txt
geany-plugins/: Makefile.am  README  configure.ac
geany-plugins/ctags/: .gitignore  AUTHORS  Makefile.am  NEWS  README  wscript_build
geanydbg/: Makefile.am  README  configure.in  indent-all.sh
geanydbg/po/: ChangeLog  be.po  de.po
geanydbg/src/: Makefile.am  dbg.c
geanydebug/: configure.in  makefile.win32
geanydebug/po/: ChangeLog  de.po
geanydebug/src/: Makefile.am  gdb-io-break.c  gdb-io-envir.c  gdb-io-frame.c  gdb-io-priv.h  gdb-io-read.c  gdb-io-run.c  gdb-io-stack.c  gdb-lex.c  gdb-ui-break.c  gdb-ui-envir.c  gdb-ui-frame.c  gdb-ui-locn.c  gdb-ui-main.c  geanydebug.c
geanydoc/: .gitignore  Makefile.am  README  configure.in  makefile.win32
geanydoc/install/: PKGBUILD.in  ebuild.in  geninst.sh  setup.nsi.in
geanydoc/po/: ChangeLog  LINGUAS  POTFILES.in  be.po  de.po  ru.po
geanydoc/src/: Makefile.am  config.c  geanydoc.c
geanyembrace/: AUTHORS  Makefile.am  configure.ac
geanyembrace/data/: config  geanyembrace.conf  icon.xcf
geanyembrace/doc/: ReadMe.html
geanyembrace/src/: Makefile.am  embrace.c
geanygdb/: ChangeLog  INSTALL  README  configure.in  makefile.win32
geanygdb/po/: de.po
geanygdb/src/: Makefile.am  gdb-io.h  gdb-ui-break.c  gdb-ui-main.c  geanydebug.c  ttyhelper.c
geanygendoc/: Makefile.am  README.in  TODO  configure.ac
geanygendoc/data/filetypes/: Makefile.am  c.conf
geanygendoc/docs/help/: Makefile.am  manual.rst
geanygendoc/po/: POTFILES.in  fr.po
geanygendoc/src/: Makefile.am  ggd-doc-setting.c  ggd-doc-setting.h  ggd-doc-type.c  ggd-doc-type.h  ggd-file-type-loader.c  ggd-file-type-loader.h  ggd-file-type-manager.c  ggd-file-type-manager.h  ggd-file-type.c  ggd-file-type.h  ggd-macros.h  ggd-options.c  ggd-options.h  ggd-plugin.c  ggd-plugin.h  ggd-tag-utils.c  ggd-tag-utils.h  ggd-utils.c  ggd-utils.h  ggd-widget-doctype-selector.c  ggd.c  ggd.h
geanyinsertnum/: wscript
geanyinsertnum/po/: LINGUAS  POTFILES.in  bg.po  insertnum.pot
geanylatex/: ChangeLog  INSTALL  Makefile.am  NEWS  README  THANKS  TODO  configure.in  geanylatex.c  geanylatex.spec  latexencodings.c  latexencodings.h  letters.h  makefile.win32  wscript
geanylatex/doc/: geanylatex.css  geanylatex.html  geanylatex.tex  geanylatex2.html  geanylatex3.html  geanylatex4.html
geanylatex/po/: ChangeLog  LINGUAS  POTFILES.in  be.po  ca.po  da.po  de.po  es.po  fr.po  geanylatex.pot  gl.po  ja.po  pt_BR.po  pt_PT.po  ru.po  tr.po  zh_CN.po
geanylatex/src/: Makefile.am  bibtex.c  bibtex.h  bibtexlabels.c  datatypes.h  formatpatterns.c  formatutils.c  formatutils.h  geanylatex.c  geanylatex.h  latexencodings.c  latexencodings.h  latexenvironments.c  latexenvironments.h  latexkeybindings.c  latexkeybindings.h  latexstructure.c  latexstructure.h  latexutils.c  latexutils.h  letters.c  letters.h  reftex.c  reftex.h  templates.c  templates.h
geanylipsum/: ChangeLog  Makefile.am  README  configure.in  makefile.win32
geanylipsum/po/: POTFILES.in  de.po  geanylipsum.pot
geanylipsum/src/: Makefile.am  geanylipsum.c
geanylua/: ChangeLog  Makefile.am  Makefile.in  configure.in  geanylua.c  glspi.h  glspi_app.c  glspi_doc.c  glspi_init.c  glspi_run.c  glspi_sci.c  glspi_ver.h
geanylua/docs/: geanylua-intro.html
geanypg/src/: geanypg.c
geanyprj/: .gitignore  INSTALL  Makefile.am  README  configure.in  makefile.win32  prgen.py  update_web.sh
geanyprj/install/: PKGBUILD.in  ebuild.in
geanyprj/po/: LINGUAS  POTFILES.in  be.po  de.po
geanyprj/src/: Makefile.am  geanyprj.c  geanyprj.h  menu.c  project.c  sidebar.c  utils.c  xproject.c
geanyprj/tests/: Makefile.am  unittests.c
geanysendmail/: ChangeLog  INSTALL  Makefile.am  Makefile.in  NEWS  README  TODO  configure.in  geanysendmail.c  indent-all.sh  makefile.win32  wscript
geanysendmail/po/: ChangeLog  POTFILES.in  de.po  geanysendmail.pot
geanysendmail/src/: Makefile.am  geanysendmail.c
geanyvc/: .gitignore  INSTALL  Makefile.am  README  configure.in  externdiff.c  geanyvc.c  geanyvc.h  indent-all.sh  makefile.win32  update_web.sh  utils.c  vc_bzr.c  vc_cvs.c  vc_git.c  vc_hg.c  vc_svk.c  vc_svn.c
geanyvc/install/: .gitignore  PKGBUILD.in  ebuild.in
geanyvc/po/: ChangeLog  POTFILES.in  POTFILES.skip  de.po
geanyvc/tests/: Makefile.am
instantsave/: ChangeLog  README  configure.in  makefile.win32
instantsave/po/: ChangeLog  POTFILES.in  de.po  (+1 more)
shiftcolumn/: ChangeLog  Makefile.am  NEWS  configure.in
spellcheck/: ChangeLog  Makefile.am  NEWS  README  configure.in  makefile.win32
spellcheck/po/: ChangeLog  POTFILES.in  de.po  geanyspellcheck.pot  spellcheck.pot
spellcheck/src/: Makefile.am  gui.c  gui.h  scplugin.c  scplugin.h  spellcheck.c  speller.c  speller.h
tasks/: AUTHORS  ChangeLog  Makefile.am  NEWS  README  configure.in
tasks/po/: POTFILES.in
tasks/src/: Makefile.am  tasks.c  tasks.h
(+14 files in other folders)
