# Process this file with autoconf to produce a configure script.
# $Id$

AC_INIT(configure.in)
AM_INIT_AUTOMAKE(spellcheck, 0.5)

AM_CONFIG_HEADER(config.h)

AC_PROG_CC

AC_DISABLE_STATIC
AM_PROG_LIBTOOL
LIBTOOL="$LIBTOOL --silent"

AC_PROG_INSTALL

# checking for Geany
PKG_CHECK_MODULES(GEANY, [geany >= 0.16])
AC_SUBST(GEANY_CFLAGS)
AC_SUBST(GEANY_LIBS)

# checking for libenchant
PKG_CHECK_MODULES(ENCHANT, [enchant >= 1.3])
AC_SUBST(ENCHANT_CFLAGS)
AC_SUBST(ENCHANT_LIBS)

GEANY_VERSION=`$PKG_CONFIG --modversion geany`
GTK_VERSION=`$PKG_CONFIG --modversion gtk+-2.0`
ENCHANT_VERSION=`$PKG_CONFIG --modversion enchant`

# i18n
GETTEXT_PACKAGE=geanyspellcheck
AC_SUBST(GETTEXT_PACKAGE)
AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE,"$GETTEXT_PACKAGE", [Gettext package.])

ALL_LINGUAS="`sed -e '/^#/d' $srcdir/po/LINGUAS`" # take all languages found in file po/LINGUAS

AM_GLIB_GNU_GETTEXT
# workaround for intltool bug (http://bugzilla.gnome.org/show_bug.cgi?id=490845)
if test "x$MSGFMT" = "xno"; then
	AC_MSG_ERROR([msgfmt not found. Please install the gettext package.])
fi

# intltool hack to define install_sh on Debian/Ubuntu systems
if test "x$install_sh" = "x"; then
	install_sh="`pwd`/install-sh"
	AC_SUBST(install_sh)
fi

# get the plugin installed at the correct location for Geany
# TODO find a way to NOT override --libdir/--docdir command line option if given
libdir="`$PKG_CONFIG --variable=libdir geany`/geany"
docdir="${datarootdir}/doc/geany-plugins/${PACKAGE}"


AC_OUTPUT([
Makefile
src/Makefile
po/Makefile.in
])

echo "----------------------------------------"
echo "Install Spell Check plugin binary in : ${libdir}"
echo "Install Spell Check files in         : ${prefix}"
echo "Using Geany version                  : ${GEANY_VERSION}"
echo "Using GTK version                    : ${GTK_VERSION}"
echo "Using libenchant version             : ${ENCHANT_VERSION}"
echo ""
echo "Configuration is done OK."
echo ""
